Status and README catch up with S1: cljwit.host works, and says how
status.md's Next section still listed 0016 and 0017 as pending; both are
done, with 0018 and 0019 behind them, so Next is now the S1 close-out --
its one named capability gap (a resource nested in a container in an
import's signature) -- the unblocked 0015 revisit, and S2.

The README promoted cljwit.host from "planned" to what it is: working,
pre-alpha. A five-minute section shows the three lifetimes, imports,
WASI and the value mapping, with the git-dep coordinates and the Java 22+
/ libwasmtime >= 43 floor spelled out.

Claude-Session: https://claude.ai/code/session_01XF5Hfq4Ca2N2XYEzWQQuHt